--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.hotel</groupId>
-	<artifactId>performance-comparison</artifactId>
+	<groupId>com.youssef.grpc</groupId>
+	<artifactId>hotel-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>performance-comparison</name>
+	<name>hotel-service</name>
 	<description>Performance comparison of REST, SOAP, GraphQL, and gRPC</description>
 	<properties>
 		<java.version>17</java.version>
